# pyTimelapse

./: .gitattributes  .gitignore  README.md  build.ps1  main.py  pyproject.toml  requirements.txt
core/: capture_service.py  models.py  system_monitor.py
ffmpeg/: __init__.py  encoder.py
gui/: main_window.py
utils/: logging_config.py  paths.py  windows.py
